--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
+    "express": "^4.17.1",
     "image-to-base64": "^2.2.0",
+    "mysql2": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sequelize": "^6.6.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
