--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vibe-check",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,14 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
-    "express": "^4.17.1",
-    "image-to-base64": "^2.2.0",
-    "mysql2": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "sequelize": "^6.6.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
