--- a/admin/frontend/package.json
+++ b/admin/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "argon2": "^0.28.2",
     "bootstrap": "^5.1.1",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
