--- a/admin/frontend/package.json
+++ b/admin/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "argon2": "^0.28.2",
+    "argon2-browser": "^1.18.0",
     "bootstrap": "^5.1.1",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
