Add login time functionality

--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "sequelize-mysql-set-timezone-fix": "^3.13.1"
   }
 }
