--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -20,6 +20,7 @@
     "argon2": "^0.28.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment-timezone": "^0.5.33",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "sequelize-mysql-set-timezone-fix": "^3.13.1"
