--- a/admin/BackEnd/package.json
+++ b/admin/BackEnd/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.6.1",
+    "moment-timezone": "^0.5.33",
     "mysql2": "^2.3.0",
     "sequelize": "^6.7.0"
   }
