--- a/admin/frontend/package.json
+++ b/admin/frontend/package.json
@@ -9,10 +9,13 @@
     "argon2": "^0.28.2",
     "argon2-browser": "^1.18.0",
     "bootstrap": "^5.1.1",
+    "chart.js": "^3.5.1",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
+    "mdbreact": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
